# pdfparser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXAMPLES.md  README.md  p.tgz  pyproject.toml  requirements-vision.txt  requirements.txt
scripts/: smoke_test.py
src/pdfparser/: __init__.py  api.py  cli.py  extract.py  logging_utils.py  ocr.py  structure.py  types.py  vision.py
